--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-SECRET_KEY=
-OPENAI_API_KEY=
+OPENAI_API_KEY=YOUR_OPENAI_API_KEY
+SECRET_KEY=YOUR_DJANGO_SECRET_KEY # you can make this value up; primarily used for deploying
