--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.25",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.1",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "@types/styled-components": "^5.1.26",
+    "@types/ws": "^8.5.4",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,8 +22,10 @@
     "react-use-websocket": "^4.3.1",
     "react-websocket": "^2.1.0",
     "reconnecting-websocket": "^4.4.0",
+    "styled-components": "^6.0.0-rc.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
