--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-textarea-autosize": "^8.4.1",
     "react-use-websocket": "^4.3.1",
     "react-websocket": "^2.1.0",
     "reconnecting-websocket": "^4.4.0",
